syntax = "proto3";

package ai.stigmer.iam.identityaccount.v1;

// https://auth0.com/docs/customize/log-streams/custom-log-streams
message Auth0Webhook {
  string date = 1;
  string type = 2;
  string description = 3;
  string client_id = 4;
  string client_name = 5;
  string ip = 6;
  string user_agent = 7;
  string user_id = 8;
}
